[api] API v2.4.0 Documentation
- Updated Versioning page to talk about v2.4.0 and its features
- Added the newly exposed collections in api/reference/collections.adoc
- Added /api/actions reference
- Added /api/conditions reference
- Added reference for /api/alerts, /api/alerts/:id/alert_actions and /api/alert_definitions
- Added /api/authentications and /api/configuration_script_payloads/:id/authentications reference
- Added /api/configuration_script_sources reference
- Querying load_balancers as subcollection or providers or instances
- Ability to copy Orchestration Templates
- Added CRUD support for /api/policies
- import_vm action on /api/providers/:id
- Ability to copy Service Orders
- Querying orchestration_stacks of services
- Added CRUD on /api/service_dialogs including service dialog copy
- Adding support for bulk assign and unassign of tags for vms and services
- Adding and Removing resources from services
- Removing all resources from services
- Adding and Removing approvers for service_requests
- CRUD on /api/service_templates
- Editing Basic VM Info.
- Added Snapshot support for Vms and Instances
- Updated resource_attributes.adoc to reflect the new collections
- Updated providers attributes

--- a/api/reference/collections.adoc
+++ b/api/reference/collections.adoc
@@ -14,18 +14,27 @@ Where :collection is one of the following:
 [cols="1<,2<",options="header",width="60%"]
 |=============================================================
 |Collection | Description
+|actions | Actions
+|alert_definitions | Alert Definitions
+|alerts | Alerts
 |arbitration_profiles | Arbitration Profiles
 |arbitration_rules | Arbitration Rules
 |arbitration_settings | Arbitration Settings
+|authentications | Authentications
 |automate | Automate Model
+|automate_domains | Automate Domains
 |automation_requests | Automation Requests
 |availability_zones | Availability Zones
 |blueprints | Blueprints
 |categories | Categories
 |chargebacks | Chargebacks
 |cloud_networks | Cloud Networks
+|cloud_volumes | Cloud Volumes
 |clusters | Clusters
 |conditions | Conditions
+|configuration_script_payloads | Configuration Script Payloads
+|configuration_script_sources | Configuration Script Source
+|container_deployments | Container Provider Deployment
 |currencies | Currencies
 |data_stores | Datastores
 |events | Events
@@ -34,8 +43,10 @@ Where :collection is one of the following:
 |groups | Groups
 |hosts | Hosts
 |instances | Instances
+|load_balancers | Load Balancers
 |measures | Measures
-|notifications | Notifications
+|notifications | User's past notifications
+|orchestration_templates | Orchestration Template
 |pictures | Pictures
 |policies | Policies
 |policy_actions | Actions
@@ -44,6 +55,7 @@ Where :collection is one of the following:
 |provision_dialogs | Provisioning Dialogs
 |provision_requests | Provision Requests
 |rates | Chargeback Rates
+|regions | Regions
 |reports | Reports
 |request_tasks | Request Tasks
 |requests | Requests
