--- a/api/reference/instances.adoc
+++ b/api/reference/instances.adoc
@@ -80,6 +80,32 @@ Instances are queried via the primary collection URL:
 Filtering, sorting and paging as mentioned on the
 link:../overview/query.html[Querying] page.
 
+[[load-balancers]]
+==== Load Balancers
+
+Load Balancers of an instance can be queried via the load_balancers subcollection as follows:
+
+Query all Load Balancers of an instance:
+
+[source,data]
+----
+GET /api/instances/:id/load_balancers
+----
+
+Query a specific Load Balancer of an instance:
+
+[source,data]
+----
+GET /api/instances/:id/load_balancers/:load_balancer_id
+----
+
+Or expanding the Load Balancers for the specific instance as follows:
+
+[source,data]
+----
+GET /api/instances/:id?expand=load_balancers
+----
+
 [[start-instance]]
 === Starting an Instance
 
