--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -5,6 +5,33 @@
 [cols="1,1,1,3",options="header"]
 |=======================================================================
 |API Version |Entrypoints |Published |Description
+|*2.4.0* |/api, /api/v2.4.0 |June 2017 | CRUD on actions,
+Creating and accessing alert actions of alert resources,
+CRUD on Alert Definitions,
+Querying Alerts,
+CRUD on Authentications,
+CRUD on Conditions,
+Querying Cloud Volumes,
+Querying Configuration Script Payloads,
+Creating and quering Authentications of Configuration Script Payloads,
+CRUD on Configuration Script Sources,
+Querying Load Balancers,
+Copying Orchestration Templates,
+CRUD on Policies,
+Accessing Load Balancers of Providers,
+Importing VMs in Providers,
+Querying Regions,
+CRUD and Copy of Service Dialogs,
+Copying Service Orders,
+Accessing Orchestration Stacks of Services,
+Bulk assignment of Tags on Services,
+Adding and Removing Resources of Services,
+Adding and Removing Approvers to Service Requests,
+CRUD of Service Templates,
+Editing Vms,
+Creating, Querying, Reverting and Deleting Snapshots of Vms,
+Bulk assignment of Tags on Vms,
+Creating, Querying and Deleting Snapshots of Instances
 |*2.3.0* |/api, /api/v2.3.0 |December 2016 |Automate Collection,
 Automate Domains Collection, Automate Domain refresh_from_source,
 Collection OPTIONS and metadata,
