--- a/api/reference/service_dialogs.adoc
+++ b/api/reference/service_dialogs.adoc
@@ -9,9 +9,188 @@ Management of Service Dialogs is provided via the collection:
 /api/service_dialogs
 ----
 
-The following action is provided on service_dialogs resources:
+The following actions are provided on service_dialogs resources:
 
+* link:#creating-service-dialogs[Creating Service Dialogs]
+* link:#editing-service-dialogs[Editing Service Dialogs]
+* link:#copying-service-dialogs[Copying Service Dialogs]
 * link:#deleting-service-dialogs[Deleting Service Dialogs]
+
+[[creating-service-dialogs]]
+=== Creating Service Dialogs
+
+Service Dialogs can be created via a POST to the _service_dialogs_ collection or via
+the *create* action signature which also allows creation of multiple service_dialogs
+in a single request.
+
+[source,data]
+----
+POST /api/service_dialogs
+----
+
+[source,json]
+----
+{
+  "description" : "Dialog",
+  "label" : "dialog_label",
+  "dialog_tabs" : [
+    {
+      "description" : "Dialog Tab",
+      "position"    : 0,
+      "label"       : "dialog_tab_label",
+      "dialog_groups" : [
+        {
+          "description" : "Dialog Group",
+          "label"       : "group_label",
+          "dialog_fields" : [
+            {
+              "name"  : "A Dialog Field",
+              "label" : "dialog_field_label"
+            }
+          ]
+        }
+      ]
+    }
+  ]
+}
+----
+
+or creating multiple Service Dialogs:
+
+[source,json]
+----
+{
+  "action" : "create",
+  "resources" : [
+    { "description" : "Dialog 1", "label" : "dialog_1_label", ... },
+    { "description" : "Dialog 2", "label" : "dialog_2_label", ... },
+    ...
+  ]
+}
+----
+
+[NOTE]
+====
+Please refer to the link:../appendices/resource_attributes.html#service_dialogs[Resource Attributes]
+page for a list of available attributes when creating Service Dialogs.
+====
+
+[[editing-service-dialogs]]
+=== Editing Service Dialogs
+
+Service Dialogs can be updated via the _edit_ action as follows:
+
+[source,data]
+----
+POST /api/service_dialogs/:id
+----
+
+[source,json]
+----
+{
+  "action" : "edit",
+  "resource" : {
+    "label" : "updated_label",
+    "content" : {
+      "dialog_tabs" : [
+        "id" : 11,
+        "label" : "updated_tab_label",
+        "dialogs_groups" : [
+          {
+            "id" : 31,
+            "dialog_fields" : [
+               { "id" : 41 }
+            ]
+          }
+        ]
+      ]
+    }
+  }
+}
+----
+
+or editing multiple Service Dialogs in a single request as follows:
+
+[source,data]
+----
+POST /api/service_dialogs
+----
+
+[source,json]
+----
+{
+  "action" : "edit",
+  "resources" : [
+    {
+      "href" : "http://localhost:3000/api/service_dialogs/21",
+      "label" : "updated_label_1",
+      "content" : ...
+    },
+    {
+      "href" : "http://localhost:3000/api/service_dialogs/22",
+      "label" : "updated_label_2",
+      "content" : ...
+    },
+    ...
+  ]
+}
+----
+
+[[copying-service-dialogs]]
+=== Copying Service Dialogs
+
+Service Dialogs can be copied to create new Service Dialogs via the _copy_ action as follows:
+
+[source,data]
+----
+POST /api/service_dialogs/:id
+----
+
+[source,json]
+----
+{
+  "action" : "copy"
+}
+----
+
+When a label is not specified, the new Service Dialog will be named *Copy of ...*
+the name of the Service Dialog being copied
+
+Optionally, the label of the new Service Dialog can also be specified as follows:
+
+[source,json]
+----
+{
+  "action" : "copy"
+  "resource" : {
+    "label" : "test_service_dialog_label"
+  }
+}
+----
+
+Multiple Service Dialogs can also be copied in a single request as follows:
+
+----
+POST /api/service_dialogs
+----
+
+[source,json]
+----
+{
+  "action" : "copy",
+  "resources" : [
+    {
+      "href" : "http://localhost:3000/api/service_dialogs/11",
+      "label" : "test_service_dialog_label_1"
+    },
+    {
+      "href" : "http://localhost:3000/api/service_dialogs/12",
+      "label" : "test_service_dialog_label_2"
+    },
+    ...
+  ]
+}
+----
 
 [[deleting-service-dialogs]]
 === Deleting Service Dialogs
