--- a/api/reference/service_queries.adoc
+++ b/api/reference/service_queries.adoc
@@ -20,6 +20,7 @@ Queries to services and related service dialogs are provided via the following c
 * link:#querying-service-dialogs[Querying Service Dialogs]
 * link:#querying-users[Querying Users]
 * link:#querying-vms[Querying VMs]
+* link:#querying-orchestration-stacks[Querying Orchestration Stacks]
 
 [[querying-pictures]]
 === Querying Pictures pertaining to services
@@ -152,3 +153,24 @@ Accessing decorators for VM resources is also made available here as follows:
 GET /api/services/:id?expand=vms&attributes=vms.num_cpu&decorators=vms.supports_console?
 ----
 
+[[querying-orchestration-stacks]]
+=== Querying Orchestration Stacks of Services
+
+This is made available via the _orchestration_stacks_ subcollection of services as follows:
+
+
+----
+GET /api/services/:id/orchestration_stacks
+----
+
+Fetching the orchestration stacks in addition to the service as follows:
+
+----
+GET /api/services/:id?expand=orchestration_stacks
+----
+
+Accessing a specific orchestration stack of a service as follows:
+
+----
+GET /api/services/:id/orchestration_stacks/:orchestration_stack_id
+----
