--- a/api/reference/tagging.adoc
+++ b/api/reference/tagging.adoc
@@ -2,6 +2,19 @@
 [[tags-tagging]]
 == Tags & Tagging
 
+* link:#tag-management[Tag Management]
+* link:#querying-tags[Querying Tags]
+* link:#querying-tags-of-resources[Querying Tags of a Resource]
+* link:#assigning-tags[Assigning Tags]
+* link:#tag-specification[Tag Specification]
+* link:#assigning-tags-to-a-resource[Assigning Tags to a Resource]
+* link:#unassigning-tags-from-a-resource[Unassining Tags from a Resource]
+* link:#bulk-assigning-tags[Bulk Assigning Tags]
+* link:#bulk-unassigning-tags[Bulk Unassigning Tags]
+
+[[tag-management]]
+=== Tag Management
+
 Management of Tags is provided in the following forms:
 
 * Querying of tags via the primary collection:
@@ -363,4 +376,145 @@ POST /api/vms/320/tags
 ----
 
 Additional Tag Management examples can be found on the main REST API Examples section.
+
+[[bulk-assigning-tags]]
+==== Bulk Assigning Tags
+
+While the general URL for tag assignment via the subcollection as follows:
+
+----
+POST /api/vms/320/tags
+----
+
+allows one to assign multiple tags to a single resource in one call, it does
+not provide the ability to assign tags to multiple resources in one call.
+
+Bulk assignment of tags is available via the _assign_tags_ action to
+the following collections:
+
+
+[cols="<",options="header",width="30%"]
+|===========================
+| Collection
+| /api/vms
+| /api/services
+|===========================
+
+The _assign_tags_ action allows adding one or more tags to one or more resources.
+
+----
+POST /api/vms
+----
+
+[source,json]
+----
+{
+  "action" : "assign_tags",
+  "resources" : [
+    {
+      "href" : "http://localhost:3000/api/vms/11",
+      "tags" : [
+        { "category" : "department", "name" : "finance" }
+      ]
+    },
+    {
+      "href" : "http://localhost:3000/api/vms/12",
+      "tags" : [
+        { "category" : "cc", "name" : "001" }
+      ]
+    }
+  ]
+}
+----
+
+===== Response:
+
+[source,json]
+----
+{
+  "results": [
+    {
+      "success": true,
+      "message": "Assigning Tag: category:'department' name:'finance'",
+      "href": "http://localhost:3000/api/vms/11",
+      "tag_category": "department",
+      "tag_name": "finance",
+      "tag_href": "http://localhost:3000/api/tags/81"
+    },
+    {
+      "success": true,
+      "message": "Assigning Tag: category:'cc' name:'001'",
+      "href": "http://localhost:3000/api/vms/12",
+      "tag_category": "cc",
+      "tag_name": "001",
+      "tag_href": "http://localhost:3000/api/tags/91"
+    }
+  ]
+}
+----
+
+[[bulk-unassigning-tags]]
+==== Bulk Unassigning Tags
+
+
+Tags can also be unassigned in bulk from multiple resources for the following
+collections via the _unassign_tags_ action:
+
+[cols="<",options="header",width="30%"]
+|===========================
+| Collection
+| /api/vms
+| /api/services
+|===========================
+
+----
+POST /api/services
+----
+
+[source,json]
+----
+{
+  "action" : "unassign_tags",
+  "resources" : [
+    {
+      "href" : "http://localhost:3000/api/services/5",
+      "tags" : [
+        { "href" : "http://localhost:3000/api/services/5/tags/81" }
+      ]
+    },
+    {
+      "href" : "http://localhost:3000/api/services/6",
+      "tags" : [
+        { "category" : "cc", "name" : "001" }
+      ]
+    }
+  ]
+}
+----
+
+===== Response:
+
+[source,json]
+----
+{
+  "results": [
+    {
+      "success": true,
+      "message": "Unassigning Tag: category:'department' name:'finance'",
+      "href": "http://localhost:3000/api/services/5",
+      "tag_category": "department",
+      "tag_name": "finance",
+      "tag_href": "http://localhost:3000/api/tags/81"
+    },
+    {
+      "success": true,
+      "message": "Unassigning Tag: category:'cc' name:'001'",
+      "href": "http://localhost:3000/api/services/6",
+      "tag_category": "cc",
+      "tag_name": "001",
+      "tag_href": "http://localhost:3000/api/tags/91"
+    }
+  ]
+}
+----
 
