update with reviewer comments

--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -3,7 +3,7 @@
 
 [NOTE]
 ====
-{product-title} ships with the Ansible role disabled. Navigate to menu:settings menu[Configuration > Settings] and select the desired server under *Zones*. Set the *Server Role* for *Embedded Ansible* to *On* to enable the role.
+In {product-title},the Ansible role is disabled by default. Navigate to the settings menu, then *Configuration* &#8594; *Settings* and select the desired server under *Zones*. Set the *Server Role* for *Embedded Ansible* to *On* to enable the role.
 ====
 
 [[ansible-inside]]
@@ -27,9 +27,9 @@ Ansible is built into {product-title_short} so there is nothing to install. The 
 
 [[verifying-embedded-ansible-worker-state]]
 === Verifying the Embedded Ansible Worker State
-Verify that the Embedded Ansible worker has started to utilize its features. 
+Verify that the embedded Ansible worker has started to utilize its features. 
 
-. Navigate to menu:settings menu[Configuration > Diagnostics] and click on the desired server.
+. Navigate to the settings menu, then *Configuration* &#8594; *Diagnostics* and click on the desired server.
 . Click on the *Workers* tab. 
 
 A table of all workers and current status will appear from which you can confirm the state of your Embedded Ansible worker. 
