--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -32,7 +32,7 @@ Verify that the embedded Ansible worker has started to utilize its features.
 . Navigate to the settings menu, then *Configuration* &#8594; *Diagnostics* and click on the desired server.
 . Click on the *Workers* tab. 
 
-A table of all workers and current status will appear from which you can confirm the state of your Embedded Ansible worker. 
+A table of all workers and current status will appear from which you can confirm the state of your embedded Ansible worker. 
 
 [[adding-a-playbook-repository]]
 === Adding a Playbook Repository
