wording edits and tweak of oc secret note after SME feedback

--- a/common/openstack/adding-an-openstack-cloud-provider.adoc
+++ b/common/openstack/adding-an-openstack-cloud-provider.adoc
@@ -38,9 +38,9 @@ include::osp-keystone-api-v3.adoc[]
 NOTE: For more information, see the definition of host aggregates and availability zones in  https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/architecture-guide/chapter-1-components#comp-compute[OpenStack Compute (nova)] in the Red Hat OpenStack Platform _Architecture Guide_.
 
 . In the *Default* tab, under *Endpoints*, configure the host and authentication details of your OpenStack provider:
-.. Select a *Security Protocol* method to specify how to authenticate to the provider:
-* *SSL without validation*: Authenticate to the provider insecurely using SSL.
-* *SSL*: Authenticate to the provider securely using a public Certificate Authority. Select this option if the provider has a valid SSL certificate and it is signed by a public Certificate Authority. No further configuration is required for this option. This is the recommended authentication method.
+.. Select a *Security Protocol* method to specify how to authenticate the provider:
+* *SSL without validation*: Authenticate the provider insecurely using SSL.
+* *SSL*: Authenticate the provider securely using a trusted Certificate Authority. Select this option if the provider has a valid SSL certificate and it is signed by a trusted Certificate Authority. No further configuration is required for this option. This is the recommended authentication method.
 * *Non-SSL*: Connect to the provider insecurely using only HTTP protocol, without SSL.
 .. In *Hostname (or IPv4 or IPv6 address)*, enter the public IP or fully qualified domain name of the OpenStack Keystone service. 
 +
