--- a/doc-Managing_Providers/topics/Adding_a_Red_Hat_Virtualization_Manager_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Red_Hat_Virtualization_Manager_Provider.adoc
@@ -16,7 +16,7 @@ The *Hostname* must be a unique fully qualified domain name.
 ====
 * Enter the *API Port* if your provider uses a non-standard port for access.
 * Select *Yes* or *No* to *Verify TLS Certificates* to specify whether to authenticate securely to the provider using TLS.
-** If you select *Yes* for *Verify TLS Certificates*, you can either paste a custom certificate in the *Trusted CA Certificates* field in PEM format, or leave the *Trusted CA Certificates* field empty if your Red Hat Virtualization provider has a public Certificate Authority.
+** If you select *Yes* for *Verify TLS Certificates*, you can either paste a custom certificate in the *Trusted CA Certificates* field in PEM format, or leave the *Trusted CA Certificates* field empty if your Red Hat Virtualization provider has a trusted Certificate Authority.
 * Provide the login credentials for the Red Hat Virtualization Manager administrative user:
 ** Enter the user name (formatted as `admin@internal`) in the *Username* field.
 ** Enter the password in the *Password* field.
