add refresh procedure

--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -39,6 +39,22 @@ Add a repository so that {product-title} can discover and make available your Pl
 
 Once you have synced a repository, its Playbooks will become available to {product-title_short}.  
 
+[[refreshing-repositories]]
+=== Refreshing Repositories 
+{product-title} allows you to refresh a targeted playbook repository or all repositories in your inventory to ensure your playbooks are current. 
+
+Refresh a targeted repository:
+
+. Navigate to menu:Automation[Ansible > Repositories].
+. Click on a repository.  
+. Click  image:1847.png[Configuration] (*Configuration*), then  image:2003.png[Refresh this Repository] (*Refresh this Repository*).
+
+Alternately, you can refresh some or all repositories from the list view:
+ 
+. Navigate to menu:Automation[Ansible > Repositories].
+. Check those repositories to refresh. Click *Check All* to select all repositories.
+. Click  image:1847.png[Configuration] (*Configuration*), then  image:2003.png[Refresh Selected Ansible Repositories] (*Refresh Selected Ansible Repositories*).
+
 [[adding-credentials]]
 === Adding Credentials
 
