added two new container roles to groups table

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -954,17 +954,20 @@ This group must be in the LDAP directory source you specified for the server. Se
 |EvmGroup-administrator|Administrator
 |EvmGroup-approver|Approver
 |EvmGroup-auditor|Auditor
+|EvmGroup-consumption_administrator|Consumption Administrator
+|EvmGroup-container_administrator|Container Administrator
+|EvmGroup-container_operator|Container Operator
 |EvmGroup-desktop|Desktop
 |EvmGroup-operator|Operator
 |EvmGroup-security|Security
 |EvmGroup-super_administrator|Super Administrator
 |EvmGroup-support|Support
-|EvmGroup-user|User
-|EvmGroup-user_limited_self_server|User Limited Self Service
-|EvmGroup-user_self_service|User Self Service
-|EvmGroup-vm_user|Vm User
 |EvmRole-tenant_administrator|Tenant Administrator
 |EvmRole-tenant_quota_administrator|Tenant Quota Administrator
+|EvmGroup-user|User
+|EvmGroup-user_limited_self_service|User Limited Self Service
+|EvmGroup-user_self_service|User Self Service
+|EvmGroup-vm_user|Vm User
 |=======================================================================
 +
 . Make each user of your directory service that you want to have access to {product-title} a member of one of these groups.
