--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -765,6 +765,11 @@ Deploying several {product-title_short} appliances with a load balancer can be u
 
 However, running several appliances behind a load balancer can cause login issues from the Self Service user interface because `memcached`, the service storing the session in memory, is not shared between the appliances. To prevent this, configure your environment using the steps below to run the `memcached` service on one appliance and have it shared with the other appliances.
 
+[IMPORTANT]
+====
+When using this configuration, always start the appliance that owns `memcached` first, and ensure that `memcached` is running before starting the additional appliances. Starting another appliance before the `memcached` appliance may result in starting or login issues.
+====
+
 The following example shows configuration on two appliances, `appliance1` and `appliance2`:
 
 . On `appliance1`, open the 11211 port in the firewall:
@@ -782,7 +787,7 @@ The following example shows configuration on two appliances, `appliance1` and `a
   :memcache_server_opts: "-l 0.0.0.0 -I 1M"
 ----
 +
-This configures `memcached` to run on `appliance1`, but listen to all servers (-l 0.0.0.0). The `memcache_server: option` line, which specifies where it connects to, remains set as itself (127.0.0.1).
+This configures `memcached` to run on `appliance1`, but listen to all servers (-l 0.0.0.0). The `memcache_server` line, which specifies where it connects to, remains set as itself (127.0.0.1).
 +
 . Click *Save*.
 . Restart `appliance1`:
@@ -791,7 +796,7 @@ This configures `memcached` to run on `appliance1`, but listen to all servers (-
 # systemctl restart appliance1
 ----
 
-. Configure `appliance2` to point to `appliance1` by specifying the IP address for `appliance1` in the `memcache_server: option` line. Configure this in the server's advanced settings by navigating to the settings menu, selecting *Configuration*, then the *Advanced* tab:
+. Configure `appliance2` to point to `appliance1` by specifying the IP address for `appliance1` in the `memcache_server` line. Configure this in the server's advanced settings by navigating to the settings menu, selecting *Configuration*, then the *Advanced* tab:
 +
 ----
 :session:
@@ -810,7 +815,4 @@ You can then get an API token from `appliance1`, and use it to access the API fr
 
 The shared `memcached` service now runs only on `appliance1`, and any other appliance accesses `memcached` from that appliance. Configure additional appliances with the steps for `appliance2`.
 
-[IMPORTANT]
-====
-When using this configuration, always start the appliance that owns `memcached` first, and ensure that `memcached` is running before starting the additional appliances. Starting another appliance before the `memcached` appliance may result in starting or login issues.
-====
+
