Restructured/positioned the content in Deployment Planning and Managing Infratructure and Inventory for a better flow. Also created a new section called Data Optimization Features to group the related content together, and linked it from VM, Cluster, Host, Datastores

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Data_Optimization_Features.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Data_Optimization_Features.adoc
@@ -1,45 +1,5 @@
-[[capacity-utilization-features]]
-= Capacity and Utilization Data Features
-
-[[chart-features]]
-== Capacity and Utilization Chart Features
-
-Capacity and utilization charts for host, clusters, virtual machines, and datastore provides its own set of special features including zooming in
-on a chart and shortcut menus.
-
-[[zooming-into-a-chart]]
-=== Zooming into a Chart
-
-. Navigate to the chart you want to zoom. If you hover anywhere on the
-  chart, two dashed lines will appear to target a coordinate of the
-  chart.
-. Click image:2251.png[](*Click to zoom in*) in the lower left corner of the
-  chart to zoom into it.
-. To go back to the regular view click image:2252.png[](*Click to zoom out*) on
-  the enlarged chart.
-
-[[drilling-into-chart-data]]
-=== Drilling into Chart Data
-
-. Navigate to the chart you want to get more detail from.
-. Hover over a data point to see the coordinates.
-. Click on a data point to open a shortcut menu for the chart. In this
-  example, we can use the shortcut menu to go to the hourly chart or
-  display the virtual machines that were running at the time the data
-  was captured.
-+
-* If you are viewing the *CPU*, *Disk*, *Memory*, or *Network* charts,
-  selecting from the *Chart* option will change all of the charts on
-  the page to the new interval selected.
-* If you are viewing the *CPU*, *Disk*, *Memory*, or *Network* charts,
-  selecting from the *Display* option will allow you to drill into
-  the virtual machines or *Hosts* that were running at the time.
-* If you are viewing the *VM* or *Hosts* chart, the *Display* menu will
-  allow you to view running or stopped virtual machines. The time
-  of the data point will be displayed in addition to the virtual
-  machines that apply. From here, click on a virtual machine to view
-  its details.
-
+[[data-optimization-features]]
+= Data Optimization Features
 
 [[optimization]]
 == Optimization
