--- a/doc-Deployment_Planning_Guide/topics/capacity.adoc
+++ b/doc-Deployment_Planning_Guide/topics/capacity.adoc
@@ -306,7 +306,7 @@ capacity and utilization charts under the menu:Compute[Infrastructure] tab.
 |=======================================================================
 
 ifdef::cfme[]
-For procedures to view capacity and utilization charts for hosts, clusters, and virtual machines, see the following sections in _Managing Infrastructure and Inventory_, as well as see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/managing_infrastructure_and_inventory/#capacity-utilization-features[Capacity and Utilization Data Features] for information about chart features and other trend reports.
+For procedures to view capacity and utilization charts for hosts, clusters, and virtual machines, see the following sections in _Managing Infrastructure and Inventory_:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/managing_infrastructure_and_inventory/sect_hosts#viewing_capacity_and_utilization_charts_for_a_host[Viewing Capacity and Utilization Charts for a Host]
 * link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/managing_infrastructure_and_inventory/sect_clusters#viewing_capacity_and_utilization_charts_for_a_cluster[Viewing Capacity and Utilization Charts for a Cluster]
@@ -333,8 +333,46 @@ Charts created include:
 
 ifdef::cfme[]
 * See link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/managing_infrastructure_and_inventory/sect_datastores#viewing_capacity_and_utilization_charts_for_a_datastore[Viewing Capacity and Utilization Charts for a Datastore] in _Managing Infrastructure and Inventory_ for more information.
-* See link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/managing_infrastructure_and_inventory/#capacity-utilization-features[Capacity and Utilization Data Features] in _Managing Infrastructure and Inventory_ for information about chart features and other trend reports.
 endif::cfme[]
+
+[[chart-features]]
+=== Capacity and Utilization Chart Features
+
+Capacity and utilization charts for host, clusters, virtual machines, and datastore provides its own set of special features including zooming in
+on a chart and shortcut menus.
+
+[[zooming-into-a-chart]]
+==== Zooming into a Chart
+
+. Navigate to the chart you want to zoom. If you hover anywhere on the
+  chart, two dashed lines will appear to target a coordinate of the
+  chart.
+. Click image:2251.png[](*Click to zoom in*) in the lower left corner of the
+  chart to zoom into it.
+. To go back to the regular view click image:2252.png[](*Click to zoom out*) on
+  the enlarged chart.
+
+[[drilling-into-chart-data]]
+==== Drilling into Chart Data
+
+. Navigate to the chart you want to get more detail from.
+. Hover over a data point to see the coordinates.
+. Click on a data point to open a shortcut menu for the chart. In this
+  example, we can use the shortcut menu to go to the hourly chart or
+  display the virtual machines that were running at the time the data
+  was captured.
++
+* If you are viewing the *CPU*, *Disk*, *Memory*, or *Network* charts,
+  selecting from the *Chart* option will change all of the charts on
+  the page to the new interval selected.
+* If you are viewing the *CPU*, *Disk*, *Memory*, or *Network* charts,
+  selecting from the *Display* option will allow you to drill into
+  the virtual machines or *Hosts* that were running at the time.
+* If you are viewing the *VM* or *Hosts* chart, the *Display* menu will
+  allow you to view running or stopped virtual machines. The time
+  of the data point will be displayed in addition to the virtual
+  machines that apply. From here, click on a virtual machine to view
+  its details.
 
 
 [[utilization-trends]]
@@ -344,6 +382,9 @@ endif::cfme[]
 of your clusters, providers, and datastores. You can choose from summary,
 details, or report view.
 
+ifdef::cfme[]
+For more information about data optimization features and utilization trend reports, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/managing_infrastructure_and_inventory/sect_datastores#data_optimization_features[Data Optimization Features] in _Managing Infrastructure and Inventory_.
+endif::cfme[]
 
 [[planning-where-to-put-a-new-virtual-machine]]
 === Planning Where to Put a New Virtual Machine
