--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Host.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Host.adoc
@@ -28,10 +28,7 @@ Daily charts only include full days of data.
 If a day does not include all the 24 data points for a day, the data does not show for that day.
 ====
 
-ifdef::cfme[]
-For information about chart features and other trend reports, see xref:capacity-utilization-features[].
-endif::cfme[]
-
+For information about data optimization features and other trend reports, see xref:data-optimization-features[].
 
 
 
