--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_an_Instance.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_an_Instance.adoc
@@ -28,10 +28,7 @@ Daily charts only include full days of data.
 This means {product-title} does not show daily data for a day without a complete 24 data point range for a day.
 ====
 
-ifdef::cfme[]
-For information about chart features and other trend reports, see xref:capacity-utilization-features[].
-endif::cfme[]
-
+For information about data optimization features and other trend reports, see xref:data-optimization-features[].
 
 
 
