--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2953,7 +2953,7 @@ To restore a database from a backup:
 . Press `Y` to confirm.
 . After the backup completes, press *Enter* to return to the menu.
 . Press *Enter* again to manually configure settings.
-. Select `Start EVM Server Processes` to restart all processes on servers that connect to this VMDB..
+. Select `Start EVM Server Processes` to restart all processes on servers that connect to this VMDB.
 . Enter `Y` to confirm.
 . Start the `regmgrd` service: 
 +
