Restructured the Deployment Planning and Managing Infrastructure and Inventory guide and fixed the dead links to other titles. Also, moved the example postgresql config file at the end as an Appendix.

--- a/doc-Deployment_Planning_Guide/cfme/master.adoc
+++ b/doc-Deployment_Planning_Guide/cfme/master.adoc
@@ -17,4 +17,13 @@ include::topics/common/introduction.adoc[]
 include::topics/planning.adoc[]
 include::topics/capacity.adoc[]
 
+[appendix]
+[[appendix]]
+== Appendix
+
+[[example-postgresql-configuration-file]]
+=== Example PostgreSQL Configuration File
+include::common/example-postgresql-config-file.adoc[]
+
+
 
