--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Datastore.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Datastore.adoc
@@ -30,6 +30,6 @@ Daily charts only include full days of data.
 If a day does not include all the 24 data points for a day, the data does not show for that day.
 ====
 
-
+For information about data optimization features and other trend reports, see xref:data-optimization-features[].
 
 
