add info and procedure on run ansible playbook action

--- a/doc-Policies_and_Profiles_Guide/topics/chap_actions.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/chap_actions.adoc
@@ -77,6 +77,8 @@ inventory.
 |Retire Virtual Machine |Retire the virtual machine. (It will remain in
 inventory, but cannot be started.)
 
+|Run Ansible Playbook |Run an Ansible playbook against an inventory selection.  
+
 |Show EVM Event on Timeline |To show the EVM event on the timeline.
 
 |Shutdown Virtual Machines Guest OS |Shut down the virtual machine's
@@ -153,6 +155,8 @@ include::To_create_a_CPU_reconfigure_Action.adoc[]
 include::To_create_a_memory_reconfigure_Action.adoc[]
 
 include::To_create_an_Remove_Tag_Action.adoc[]
+
+include::To_create_an_Ansible_Playbook_Run.adoc[]
 
 include::To_create_an_e-mail_Action.adoc[]
 
