--- a/doc-Policies_and_Profiles_Guide/topics/To_create_an_Ansible_Playbook_Run.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/To_create_an_Ansible_Playbook_Run.adoc
@@ -11,7 +11,7 @@ ifdef::cfme[See link:https://access.redhat.com/documentation/en/red-hat-cloudfor
 
 . Select *Run Ansible Playbook* from *Action Type*.
 
-. Select the playbook catalog item to run from in *Playbook Catalog Item*.
+. Select the playbook catalog item to run from *Playbook Catalog Item*.
 
 . Check the inventory against which you run the Ansible playbook.
 
